--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  
+<img src="image/Jersey_City_Skyline_sunset.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+
 <body>
 
 <h1>My First Heading</h1>
