--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   
-<img src="image/Jersey_City_Skyline_sunset.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+<img src="image/Jersey_City_Skyline_sunset.jpg" alt="HTML5 Icon">
 
 <body>
 
