--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <title>International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems 2024 (DTMDCS 2024)</title>
+</head>
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" alt="HTML5 Icon">
 
