--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 </head>
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" alt="HTML5 Icon" width="100%" height="100%">
-
+  
 <body>
+  
+  <h1>Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)</h1>
 
-<h1>Call for Papers</h1>
+
+
+<h2>Call for Papers</h2>
 
 <p>
   Digital Twin (DT) has become a game-changing technology in many AI/ML-driven distributed computing applications leveraging next-generation mobile wireless 
