--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   
 <body>
   
-  <h1>Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)</h1>
+  <h1 align="center"> 
+    Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)
+  </h1>
   <br>
 
 
