--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)
 </h1>
   
-<img src="image/Jersey_City_Skyline_sunset.jpg" alt="HTML5 Icon" width="100%" height="100%">
+<img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
   
 <body>
   
