--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>DTMDCS 2024</title>
 </head>
 
-<h1 align="center"> 
+<h1 style="font-size: 30px" align="center"> 
     Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)
 </h1>
   
