--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <br>
 
 
-<h2>Call for Papers</h2>
+<h2 style="font-size: 28px"> 
+  Call for Papers
+</h2>
 
 <p style="font-size: 20px" align="justify">
   Digital Twin (DT) has become a game-changing technology in many AI/ML-driven distributed computing applications leveraging next-generation mobile wireless
