--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>DTMDCS 2024</title>
 </head>
 
+  <div style="margin:10px;">
+
 <h1 style="font-size: 40px" align="center"> 
     Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)
 </h1>
