--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <br>
 
 
-<h2 style="font-size: 28px"> 
+<h2 style="margin:20px; font-size: 28px"> 
   Call for Papers
 </h2>
 
-<p style="style="margin:20px; font-size: 20px" align="justify">
+<p style="margin:20px; font-size: 20px" align="justify">
   
   Digital Twin (DT) has become a game-changing technology in many AI/ML-driven distributed computing applications leveraging next-generation mobile wireless
   networks, e.g., 6G, by fully replicating the physical devices and produce real-time interactions to efficiently manage the entire system. DT in multi-tier distributed computing systems enables communication-oriented computing from the cloud-computing-based twin object to the edge-based twin objects by 
