--- a/index.html
+++ b/index.html
@@ -50,5 +50,16 @@ Submitted papers must represent original material which is not currently under r
   Important Dates
 </h2>
 
+  <p style="margin:30px; font-size: 20px" align="justify">
+  Paper submission deadline:	March 20, 2024
+    </p>
+    <p style="margin:30px; font-size: 20px" align="justify">
+Author notification:	April 24, 2024
+      </p>
+      <p style="margin:30px; font-size: 20px" align="justify">
+Camera ready:	May 10, 2024
+        </p>
+
+
 </body>
 </html>
