--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   distributing storage/caching, control, and networking capabilities, thus extending the traditional cloud computing architecture to the edge of the network. The new computing model resulting from combining computer-communications and multi-dimensional resources management with multi-tier distributed computing will promote the rapid development of DT and enable efficient task offloading of computation-intensive tasks, so as to realize ultra-reliable and low latency  of the interactions between physical and virtual objects. However, attaining the full potential of DT in practical multi-tier distributed computing scenarios  is challenging, and there are still many important open research problems, especially from the various perspectives of distributed computing.   This workshop aims to provide a forum for the latest advances for DT-enabled 6G multi-tier distributed computing research, innovations, and applications  to the distributed computing communities, in order to bridge the gap between theory and applications. We solicit high-quality original research papers on  topics which include, but are not limited to:
 </p>
 
-  <ul style="margin:50px; font-size: 20px">
+<ul style="margin:50px; font-size: 20px">
   <li>Fundamental limits and performance analysis of resource allocation for DT-enabled 6G multi-tier distributed computing</li>
   <li>Machine learning aided DT in 6G multi-tier distributed computing </li>
   <li>Joint optimal design of signal processing, computing, communications for DT-enabled 6G multi-tier distributed computing </li>
@@ -51,15 +51,13 @@ Submitted papers must represent original material which is not currently under r
   Important Dates
 </h2>
 
-  <p style="margin:50px; font-size: 20px" align="justify">
-  Paper submission deadline:	March 20, 2024
-    </p>
-    <p style="margin:50px; font-size: 20px" align="justify">
-Author notification:	April 24, 2024
-      </p>
-      <p style="margin:50px; font-size: 20px" align="justify">
-Camera ready:	May 10, 2024
-        </p>
+<ul style="margin:50px; font-size: 20px">
+  
+  <li>Paper submission deadline:	March 20, 2024 </li>
+  <li>Author notification:	April 24, 2024 </li>
+  <li>Camera ready:	May 10, 2024 </li>  
+</ul>
+
 
 
 </body>
