--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 <body>
   
 
-  <br>
+ <div class="button-group">
+    <a href="##-Call-for-Papers" class="button primary">Call for papers</a>
+    <a href="keynote.md" class="button primary">Keynote</a>
+    <a href="program.md" class="button primary">Program</a>
+    <a href="#" class="button primary">Registration</a>
+</div>
 
 
 <h2 style="margin:50px; font-size: 28px"> 
