--- a/index.html
+++ b/index.html
@@ -13,7 +13,35 @@
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
   
 <body>
-  
+
+     <div>
+            <span class="category">NEWS</span>
+            <hr class="line">
+            <div align=left
+                style='
+                border: solid 2px grey;
+                width: 1000px;
+                height: 150px;
+                overflow: scroll;
+                scrollbar-face-color: #889B9F;
+                scrollbar-shadow-color: #3D5054;
+                scrollbar-highlight-color: #C3D6DA;
+                scrollbar-3dlight-color: #3D5054;
+                scrollbar-darkshadow-color: #85989C;
+                scrollbar-track-color: #95A6AA;
+                scrollbar-arrow-color: #FFD6DA;
+                '>
+                
+                <ul class="item_content">
+                    <li>
+                        <font color="black"><span>[01/2024] Workshop proposal is accepted.</span></font>
+                      
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
 
  <div class="button-group">
     <a href="##-Call-for-Papers" class="button primary">Call for papers</a>
