--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
      <div>
-            <span class="category">NEWS</span>
+            <span class="category" style="margin:50px; font-size: 28px"> NEWS </span>
             <hr class="line">
             <div align=left
                 style='
