--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 scrollbar-arrow-color: #FFD6DA;
                 '>
                 
-                <ul class="item_content">
+                <ul class="item_content" style="margin:50px; font-size: 20px">
                     <li>
                         <font color="black"><span>[01/2024] Workshop proposal is accepted.</span></font>
                       
