--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="category" style="margin:50px; font-size: 28px"> NEWS </span>
             <hr class="line">
             <div align=left
-                style='
+                style="
                 margin: 50px
                 border: solid 2px grey;
                 width: 1000px;
@@ -31,7 +31,7 @@
                 scrollbar-darkshadow-color: #85989C;
                 scrollbar-track-color: #95A6AA;
                 scrollbar-arrow-color: #FFD6DA;
-                '>
+                ">
                 
                 <ul class="item_content" style="margin:50px; font-size: 20px">
                     <li>
