--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <hr class="line">
             <div align=left
                 style="
-                margin: 50px
+                margin: 50px;
                 border: solid 2px grey;
                 width: 1000px;
                 height: 150px;
