--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <h2 style="margin:50px; font-size: 28px"> 
   Call for Papers
 </h2>
+  <hr class="line">
 
 <p style="margin:50px; font-size: 20px" align="justify">
   
@@ -74,6 +75,7 @@
  <h2 style="margin:50px; font-size: 28px"> 
   Submission Procedure
 </h2>
+  <hr class="line">
 
 <p style="margin:50px; font-size: 20px" align="justify">
   
@@ -84,6 +86,7 @@ Submitted papers must represent original material which is not currently under r
 <h2 style="margin:50px; font-size: 28px"> 
   Important Dates
 </h2>
+  <hr class="line">
 
 <ul style="margin:50px; font-size: 20px">
   
