--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
     <a href="#" class="button primary">Registration</a>
 </div>
 
+  <button type="button"> Call for papers</button>
+  <button type="button"> Keynote </button>
+  <button type="button"> Workshop Program</button>
+  <button type="button"> Workshop Registration</button>
+
 
 <h2 style="margin:50px; font-size: 28px"> 
   Call for Papers
