--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-
+  <button type="button"> Organizing Committee </button>
   <button type="button"> Call for papers</button>
   <button type="button"> Keynote </button>
   <button type="button"> Workshop Program</button>
