--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
             </div>
         </div>
 
-  <button type="button"> Organizing Committee </button>
-  <button type="button"> Call for papers</button>
-  <button type="button"> Keynote </button>
-  <button type="button"> Workshop Program</button>
-  <button type="button"> Workshop Registration</button>
+  <button class="button button2"> Organizing Committee </button>
+  <button class="button button2"> Call for papers</button>
+  <button class="button button2"> Keynote </button>
+  <button class="button button2"> Workshop Program</button>
+  <button class="button button2"> Workshop Registration</button>
 
  <hr class="line">
 <h2 style="margin:50px; font-size: 28px"> 
