--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -4,4 +4,11 @@
 <head>
   <title>DTMDCS 2024</title>
 </head>
+
+<h1 style="font-size: 40px" align="center"> 
+   Organizing Committee for ICDCS 2024 International Workshop on DTMDCS
+</h1>
+  
+<img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+  
 </html>
