--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
   
 <body>
-
+  <a href="https://dtmdcs.github.io/test/Organizing_Committee">
   <button class="button button2"> Organizing Committee </button>
+  </a>
   <button class="button button2"> Call for papers</button>
   <button class="button button2"> Keynote </button>
   <button class="button button2"> Workshop Program</button>
