--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
   <a href="https://dtmdcs.github.io/test/Organizing_Committee">
   <button class="button button2"> Organizing Committee </button>
   </a>
-  <button class="button button2"> Call for papers</button>
+  <a href="https://dtmdcs.github.io/test/Keynote">
   <button class="button button2"> Keynote </button>
+  </a>
+   <a href="https://dtmdcs.github.io/test/Workshop_Program">
   <button class="button button2"> Workshop Program</button>
+   </a>
+  <a href="https://dtmdcs.github.io/test/Workshop_Registration">
   <button class="button button2"> Workshop Registration</button>
+  </a>
 
      <div>
             <span class="category" style="margin:50px; font-size: 28px"> NEWS </span>
