--- a/Workshop_Registration.html
+++ b/Workshop_Registration.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <title>DTMDCS 2024</title>
+</head>
+
+<h1 style="font-size: 40px" align="center"> 
+   Workshop Registration for International Workshop on DTMDCS 2024
+</h1>
+  
+<img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+  
+</html>
