--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -6,7 +6,7 @@
 </head>
 
 <h1 style="font-size: 40px" align="center"> 
-   Organizing Committee for ICDCS 2024 International Workshop on DTMDCS
+   Organizing Committee for International Workshop on DTMDCS 2024
 </h1>
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
