--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -10,5 +10,18 @@
 </h1>
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+
+  <body>
+    <hr class="line">
+
+ <h2 style="margin:50px; font-size: 28px"> 
+  General Chair
+</h2>
+
+<p style="margin:50px; font-size: 20px" align="justify">
+  
+Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A. 
+</p>
+  </body>
   
 </html>
