--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -16,19 +16,24 @@
 
  <h2 style="margin:50px; font-size: 28px"> 
   General Chair
+ </h2>
 
 <p style="margin:50px; font-size: 20px" align="justify">
   
 Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A. 
 </p>
 
-   <h2 style="margin:50px; font-size: 28px"> 
-  General Chair
-
+  <h2 style="margin:50px; font-size: 28px"> 
+  TPC Chair
+  </h2>
 <p style="margin:50px; font-size: 20px" align="justify">
   
 Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China 
 </p>
+
+    <h2 style="margin:50px; font-size: 28px"> 
+  TPC Members
+  </h2>
   </body>
   
 </html>
