--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -17,12 +17,13 @@
  <h2 style="margin:50px; font-size: 28px"> 
   General Chair
  </h2>
+    
  <div>
-  <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+  <img src="image/Xi_Zhang.jpg" width="20" height="20">
   <p style="margin:50px; font-size: 20px" align="justify"> 
    Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A. 
    </p>
-    </div>
+</div>
 
   <h2 style="margin:50px; font-size: 28px"> 
   TPC Chair
