--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -28,10 +28,12 @@
   <h2 style="margin:50px; font-size: 28px"> 
   TPC Chair
   </h2>
-<p style="margin:50px; font-size: 20px" align="justify">
-  
-Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China 
-</p>
+  <div>
+   <img src="image/Kunlun_Wang.jpg" width="20" height="20">
+     <p style="margin:50px; font-size: 20px" align="justify">
+      Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China 
+     </p>
+  </div>
 
     <h2 style="margin:50px; font-size: 28px"> 
   TPC Members
