--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -19,7 +19,7 @@
  </h2>
     
  <div>
-  <img src="image/Xi_Zhang.jpg" width="20" height="20">
+  <img src="image/Xi_Zhang.jpg" width="30%" height="30%">
   <p style="margin:50px; font-size: 20px" align="justify"> 
    Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A. 
    </p>
@@ -29,7 +29,7 @@
   TPC Chair
   </h2>
   <div>
-   <img src="image/Kunlun_Wang.jpg" width="20" height="20">
+   <img src="image/Kunlun_Wang.jpg" width="30%" height="30%">
      <p style="margin:50px; font-size: 20px" align="justify">
       Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China 
      </p>
