--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -3,6 +3,13 @@
 
 <head>
   <title>DTMDCS 2024</title>
+  <style>
+img {
+  float: left;
+  border: 1px dotted black;
+  margin: 0px 0px 15px 20px;
+}
+</style>
 </head>
 
 <h1 style="font-size: 40px" align="center"> 
