--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>DTMDCS 2024</title>
+  <title>Organizing Committee for DTMDCS 2024</title>
   <style>
 img {
   float: left;
