--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -4,9 +4,8 @@
 <head>
   <title>Organizing Committee for DTMDCS 2024</title>
   <style>
-img {
-  float: left;
-  margin: 20px 20px 20px 20px;
+table, th, td {
+  border:0px solid black;
 }
 </style>
 </head>
