--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -19,6 +19,22 @@ table, th, td {
   <body>
     <hr class="line">
 
+<table style="width:100%">
+  <tr>
+    <th>General Chair</th>
+    <th><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></th>
+    <th>Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A.</th>
+  </tr>
+  <tr>
+    <td>TPC Chair</td>
+    <td><img src="image/Kunlun_Wang.jpg" width="20%" height="20%"></td>
+    <td>Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China</td>
+  </tr>
+</table>
+
+
+
+    
  <div>
   <h2 style="margin:50px; font-size: 28px"> 
   General Chair
