--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -22,12 +22,14 @@ table, th, td {
 <table style="width:100%">
   <tr>
     <th>General Chair</th>
-    <th><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></th>
-    <th>Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A.</th>
+    <th>TPC Chair</th>
   </tr>
   <tr>
-    <td>TPC Chair</td>
+    <td><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></td>
     <td><img src="image/Kunlun_Wang.jpg" width="20%" height="20%"></td>
+</tr>
+  <tr>
+<td>Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A.</th>
     <td>Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China</td>
   </tr>
 </table>
