--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -6,6 +6,7 @@
   <style>
 table, th, td {
   border:0px solid black;
+  text-align: center;
 }
 </style>
 </head>
@@ -27,9 +28,9 @@ table, th, td {
   <tr>
     <td><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></td>
     <td><img src="image/Kunlun_Wang.jpg" width="40%" height="40%"></td>
-</tr>
+  </tr>
   <tr>
-<td>Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A.</th>
+    <td>Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A.</th>
     <td>Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China</td>
   </tr>
 </table>
