--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -22,7 +22,7 @@ table, th, td {
 
 <table style="width:100%">
   <tr>
-    <th>General Chair</th>
+    <th> <h2 style="margin:50px; font-size: 28px">  General Chair </h2> </th>
     <th>TPC Chair</th>
   </tr>
   <tr>
