--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -23,7 +23,7 @@ table, th, td {
 <table style="width:100%">
   <tr>
     <th> <h2 style="margin:50px; font-size: 28px">  General Chair </h2> </th>
-    <th>TPC Chair</th>
+    <th><h2 style="margin:50px; font-size: 28px"> TPC Chair</h2></th>
   </tr>
   <tr>
     <td><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></td>
