--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -22,16 +22,16 @@ table, th, td {
 
 <table style="width:100%">
   <tr>
-    <th> <h2 style="margin:50px; font-size: 28px">  General Chair </h2> </th>
-    <th><h2 style="margin:50px; font-size: 28px"> TPC Chair</h2></th>
+    <th> <h2 style="font-size: 28px">  General Chair </h2> </th>
+    <th><h2 style="font-size: 28px"> TPC Chair</h2></th>
   </tr>
   <tr>
     <td><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></td>
     <td><img src="image/Kunlun_Wang.jpg" width="40%" height="40%"></td>
   </tr>
   <tr>
-    <td>Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A.</th>
-    <td>Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China</td>
+    <td style="font-size: 20px"> Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang</a>, Texas A&M University, College Station, U.S.A.</td>
+    <td style="font-size: 20px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang</a>, East China Normal University, China</td>
   </tr>
 </table>
 
