--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
   
 <body>
-  <a href="https://dtmdcs.github.io/test/Organizing_Committee">
+  <a href="Organizing_Committee.html">
   <button class="button button2"> Organizing Committee </button>
   </a>
   
