--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
   <button class="button button2"> Organizing Committee </button>
   </a>
   
-  <a href="https://dtmdcs.github.io/test/Keynote">
+  <a href="Keynote.html">
   <button class="button button2"> Keynote </button>
   </a>
   
-   <a href="https://dtmdcs.github.io/test/Workshop_Program">
+   <a href="Workshop_Program.html">
   <button class="button button2"> Workshop Program</button>
    </a>
   
-  <a href="https://dtmdcs.github.io/test/Workshop_Registration">
+  <a href="Workshop_Registration.html">
   <button class="button button2"> Workshop Registration</button>
   </a>
 
