--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -20,7 +20,7 @@ table, th, td {
   <body>
     <hr class="line">
 
-<table >
+<table style="table-layout: fixed ; width: 100%;">
   <tr>
     <th> <h2 style="font-size: 28px">  General Chair </h2> </th>
     <th><h2 style="font-size: 28px"> TPC Chair</h2></th>
