--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
   <li>Joint optimal design of signal processing, computing, communications for DT-enabled 6G multi-tier distributed computing </li>
   <li>Security and privacy issues of DT-enabled 6G multi-tier distributed computing </li>
   <li>Testbeds for DT-enabled 6G multi-tier distributed computing</li>
+  <li>Federated learning for DT in multi-tier distributed computing systems</li>
+  <li>Over-the-air computation for DT in multi-tier distributed computing systems</li>
+  <li>Twin models and optimization in multi-tier distributed computing systems</li>
 </ul>
 
   <hr class="line">
