--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
 
 <p style="margin:50px; font-size: 20px" align="justify">
   
-Submitted papers must represent original material which is not currently under review in any other conference or journal and has not been previously published. Paper length should not exceed six-page standard IEEE conference two-column format (including all text, figures, and references). Please see the Author Information page for submission guidelines in the IEEE ICDCS 2024 website. All papers should be submitted through Esaychair 
-  (<a href="https://easychair.org/conferences/?conf=icdcs2024">https://easychair.org/conferences/?conf=icdcs2024</a>) and will go through a peer review process. All accepted and presented papers will be included in the IEEE ICDCS 2024 proceedings and IEEE digital library. IEEE reserves the right to exclude an accepted and registered but not presented paper from the IEEE digital library.
+Submitted papers must represent original material which is not currently under review in any other conference or journal and has not been previously published. Paper length should not exceed six-page standard IEEE conference two-column format (including all text, figures, and references). Please see the Author Information page for submission guidelines in the IEEE ICDCS 2024 website. All papers should be submitted through Esaychair Website (<a href="https://easychair.org/conferences/?conf=icdcs2024">https://easychair.org/conferences/?conf=icdcs2024</a>) and will go through a peer review process. All accepted and presented papers will be included in the IEEE ICDCS 2024 proceedings and IEEE digital library. IEEE reserves the right to exclude an accepted and registered but not presented paper from the IEEE digital library.
 </p>
 
 <hr class="line">
