--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -39,6 +39,22 @@ table, th, td {
  <h2 style="margin:50px; font-size: 28px"> 
   TPC Members
   </h2>
+    <ul>
+      <li> Xu Chen, Sun Yat-sen University, China </li>
+      <li> Mugen Peng, Beijing University of Posts and Telecommunications, China </li>
+      <li> Tony Q.S. Quek, Singapore University of Technology and Design, Singapore  </li>
+      <li> Kaibin Huang, The University of Hong Kong, Hong Kong  </li>
+      <li> David J. Love, the School of Electrical and Computer Engineering, Purdue University, West Lafayette, IN, USA  </li>
+      <li> Kun Guo, East Chian Normal University, China  </li>
+      <li> Youngchul Sung, the Department of Electrical Engineering in KAIST, Daejeon, Korea </li>
+      <li> Michael D. Zoltowski, Purdue University, USA </li>
+      <li> John Grundy, Monash University, Australia </li>
+      <li> Xiaofei Wang, Tianjin University, China  </li>
+      <li> Yuanming Shi, ShanghaiTech University, China  </li>
+      <li> Changsheng You, Southern University of Science and Technology, China  </li>
+      <li> Mingzhe Chen, University of Miami, USA  </li>
+      <li> Qixuan Zhu, Texas A&M University, College Station, U.S.A.  </li>
+      </ul>
   </body>
   
 </html>
