--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -39,7 +39,7 @@ table, th, td {
  <h2 style="margin:50px; font-size: 28px"> 
   TPC Members
   </h2>
-    <ul>
+    <ul style="margin:50px; font-size: 20px">
       <li> Xu Chen, Sun Yat-sen University, China </li>
       <li> Mugen Peng, Beijing University of Posts and Telecommunications, China </li>
       <li> Tony Q.S. Quek, Singapore University of Technology and Design, Singapore  </li>
