--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <h1 style="font-size: 40px" align="center"> 
     Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)
 </h1>
+  <h3>
+  Organized in conjunction with
+IEEE International Conference on Distributed Computing Systems (ICDCS) 2024
+16-19 July 2024, Jersey City, New Jersey, USA
+  </h3>
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
   
