--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <h1 style="font-size: 40px" align="center"> 
     Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)
 </h1>
-  <h3>
-  Organized in conjunction with
+  <h3 align="center">
+  Organized in conjunction with <br>
 IEEE International Conference on Distributed Computing Systems (ICDCS) 2024
 16-19 July 2024, Jersey City, New Jersey, USA
   </h3>
