--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <h1 style="font-size: 40px" align="center"> 
     Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)
 </h1>
-  <h3 style="font-size: 25px" align="center">
+  <h3 style="margin:70px; font-size: 23px" align="center">
   Organized in conjunction with <br>
-IEEE International Conference on Distributed Computing Systems (ICDCS) 2024
+IEEE International Conference on Distributed Computing Systems (ICDCS) 2024<br>
 16-19 July 2024, Jersey City, New Jersey, USA
   </h3>
   
