--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ IEEE International Conference on Distributed Computing Systems (ICDCS) 2024<br>
                 scrollbar-arrow-color: #FFD6DA;
                 ">
                 
-                <ul class="item_content" style="margin:50px; font-size: 20px">
+                <ul class="item_content" style="margin-left:50px; font-size: 20px">
                     <li>
                         <font color="black"><span>[01/2024] Workshop proposal is accepted.</span></font>
                       
@@ -83,17 +83,17 @@ IEEE International Conference on Distributed Computing Systems (ICDCS) 2024<br>
 
 
  <hr class="line">
-<h2 style="margin:50px; font-size: 28px"> 
+<h2 style="margin-left:50px; font-size: 28px"> 
   Call for Papers
 </h2>
 
 
-<p style="margin:50px; font-size: 20px" align="justify">
+<p style="margin-left:60px;margin-right:60px; font-size: 20px" align="justify">
   
   Digital Twin (DT) has become a game-changing technology in many AI/ML-driven distributed computing applications leveraging next-generation mobile wireless networks, e.g., 6G, by fully replicating the physical devices and produce real-time interactions to efficiently manage the entire system. DT in multi-tier distributed computing systems enables communication-oriented computing from the cloud-computing-based twin object to the edge-based twin objects by distributing storage/caching, control, and networking capabilities, thus extending the traditional cloud computing architecture to the edge of the network. The new computing model resulting from combining computer-communications and multi-dimensional resources management with multi-tier distributed computing will promote the rapid development of DT and enable efficient task offloading of computation-intensive tasks, so as to realize ultra-reliable and low latency of the interactions between physical and virtual objects. However, attaining the full potential of DT in practical multi-tier distributed computing scenarios is challenging, and there are still many important open research problems, especially from the various perspectives of distributed computing. This workshop aims to provide a forum for the latest advances for DT-enabled 6G multi-tier distributed computing research, innovations, and applications to the distributed computing communities, in order to bridge the gap between theory and applications. We solicit high-quality original research papers on the topics which include, but are not limited to:
 </p>
 
-<ul style="margin:50px; font-size: 20px">
+<ul style="margin-left:60px; font-size: 20px">
   <li>Fundamental limits and performance analysis of resource allocation for DT-enabled 6G multi-tier distributed computing</li>
   <li>Machine learning aided DT in 6G multi-tier distributed computing </li>
   <li>Joint optimal design of signal processing, computing, communications for DT-enabled 6G multi-tier distributed computing </li>
@@ -106,21 +106,21 @@ IEEE International Conference on Distributed Computing Systems (ICDCS) 2024<br>
 
   <hr class="line">
 
- <h2 style="margin:50px; font-size: 28px"> 
+ <h2 style="margin-left:50px; font-size: 28px"> 
   Submission Procedure
 </h2>
 
-<p style="margin:50px; font-size: 20px" align="justify">
+<p style="margin-left:50px; font-size: 20px" align="justify">
   
 Submitted papers must represent original material which is not currently under review in any other conference or journal and has not been previously published. Paper length should not exceed six-page standard IEEE conference two-column format (including all text, figures, and references). Please see the Author Information page for submission guidelines in the IEEE ICDCS 2024 website. All papers should be submitted through Esaychair Website (<a href="https://easychair.org/conferences/?conf=icdcs2024">https://easychair.org/conferences/?conf=icdcs2024</a>) and will go through a peer review process. All accepted and presented papers will be included in the IEEE ICDCS 2024 proceedings and IEEE digital library. IEEE reserves the right to exclude an accepted and registered but not presented paper from the IEEE digital library.
 </p>
 
 <hr class="line">
-<h2 style="margin:50px; font-size: 28px"> 
+<h2 style="margin-left:50px; font-size: 28px"> 
   Important Dates
 </h2>
 
-<ul style="margin:50px; font-size: 20px">
+<ul style="margin-left:50px; font-size: 20px">
   
   <li>Paper submission deadline:	March 20, 2024 </li>
   <li>Author notification:	April 24, 2024 </li>
