--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h3 style= margin-left:70px; margin-right:70px; font-size: 25px" align="center">
   Organized in conjunction with <br>
 IEEE International Conference on Distributed Computing Systems (ICDCS) 2024<br>
-16-19 July 2024, Jersey City, New Jersey, USA
+July 16-19, 2024, Jersey City, New Jersey, USA
   </h3>
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
