--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -30,8 +30,12 @@ table, th, td {
     <td><img src="image/Kunlun_Wang.jpg" width="40%" height="40%"></td>
   </tr>
   <tr>
-    <td style="font-size: 20px"> Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang </a>, Texas A&M University, College Station, U.S.A.</td>
-    <td style="font-size: 20px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang </a>, East China Normal University, China</td>
+    <td style="font-size: 20px"> Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang </a></td>
+    <td style="font-size: 20px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang </a></td>
+  </tr>
+    <tr>
+    <td style="font-size: 20px"> Texas A&M University, College Station, U.S.A.</td>
+    <td style="font-size: 20px"> East China Normal University, China</td>
   </tr>
 </table>
 
