--- a/Keynote.html
+++ b/Keynote.html
@@ -14,6 +14,7 @@
 <body>
 
   <h1 class="page-header"> List of Keynotes </h1>
-  <h3> <strong> Prof. Xi Zhang, Texas A&M University, College Station TX, USA </strong></h3>
+  <h3> <strong> Prof. Xi Zhang, IEEE Fellow, IEEE Distinguished Lecturer, Full Professor, Founding DirectorTexas A&M University, College Station TX, USA </strong></h3>
+  <h3> <strong> Title: Statistical-QoS-Driven Digital Twins Over 6G Mobile Wireless Networks</strong></h3>
 </body>
 </html>
