--- a/Keynote.html
+++ b/Keynote.html
@@ -11,7 +11,7 @@
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
 
-<body>
+<body style="margin-left:50px; margin-right:50px">
 
   <h1 class="page-header"> List of Keynotes </h1>
   <h3> <strong> Prof. Xi Zhang, IEEE Fellow, IEEE Distinguished Lecturer, Full Professor, Founding DirectorTexas A&M University, College Station TX, USA </strong></h3>
