--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -10,6 +10,10 @@
 </h1>
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+
+  <p align="justify" style="font-size: 20px">
+   COMING SOON! 
+ </p>
   
 </html>
 
