--- a/Workshop_Registration.html
+++ b/Workshop_Registration.html
@@ -11,5 +11,7 @@
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
 
-  
+ <p align="justify" style="font-size: 20px">
+   COMING SOON! 
+ </p> 
 </html>
