--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -70,6 +70,19 @@ table, th, td {
   </tr>
 </table>
 
+    <h2 style="margin:50px; font-size: 28px"> 
+  Steering Committee Members
+  </h2>
+    <ul style="margin:50px; font-size: 20px">
+      <li> Yuanyuan Yang, State University of New York at Stony Brook, U.S.A. </li>
+      <li> Trung Q. Duong, Memorial University, Canada </li>
+      <li> Dusit Niyato, Nanyang Technological University, Singapore  </li>
+      <li> Octavia A. Dobre, Memorial University, Canada  </li>
+      <li> George K. Karagiannidis, Aristotle University of Thessaloniki, Greece  </li>
+      <li> Yang Yang, Hong Kong University of Science and Technology (Guangzhou), China  </li>
+      <li> Jie Li, Shanghai Jiao Tong University, China </li>
+      </ul>
+
  <h2 style="margin:50px; font-size: 28px"> 
   TPC Members
   </h2>
