--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -57,16 +57,16 @@ table, th, td {
 
     <table style="table-layout: fixed ; width: 100%;">
   <tr>
-    <th><h2 style="font-size: 28px"> TPC Chair</h2></th>
+    <th><h2 style="margin:50px; font-size: 28px"> TPC Chair</h2></th>
   </tr>
   <tr>
     <td><img src="image/Kunlun_Wang.jpg" width="20%" height="20%"></td>
   </tr>
   <tr>
-    <td style="font-size: 20px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang </a></td>
+    <td style="font-size: 26px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang </a></td>
   </tr>
     <tr>
-    <td style="font-size: 20px"> East China Normal University, China</td>
+    <td style="font-size: 26px"> East China Normal University, China</td>
   </tr>
 </table>
 
