--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -70,10 +70,10 @@ table, th, td {
   </tr>
 </table>
 
-    <h2 style="margin:50px; font-size: 28px"> 
+    <h2 style="margin-top:50px; font-size: 28px"> 
   Steering Committee Members
   </h2>
-    <ul style="margin:50px; font-size: 20px">
+    <ul style="margin-top:50px; font-size: 20px">
       <li> Yuanyuan Yang, State University of New York at Stony Brook, U.S.A. </li>
       <li> Trung Q. Duong, Memorial University, Canada </li>
       <li> Dusit Niyato, Nanyang Technological University, Singapore  </li>
