--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -70,7 +70,7 @@ table, th, td {
   </tr>
 </table>
 
-    <h2 style="margin-top:50px; font-size: 28px"> 
+    <h2 style="font-size: 28px"> 
   Steering Committee Members
   </h2>
     <ul style="margin-top:50px; font-size: 20px">
@@ -83,7 +83,7 @@ table, th, td {
       <li> Jie Li, Shanghai Jiao Tong University, China </li>
       </ul>
 
- <h2 style="margin:50px; font-size: 28px"> 
+ <h2 style="font-size: 28px"> 
   TPC Members
   </h2>
     <ul style="margin:50px; font-size: 20px">
