--- a/Keynote.html
+++ b/Keynote.html
@@ -25,6 +25,7 @@
    Xi Zhang (xizhang@ece.tamu.edu) received his Ph.D. degree in Electrical Engineering and Computer Science (Electrical Engineering-Systems) from The University of Michigan, Ann Arbor, MI, USA. He is currently a Full Professor and the Founding Director of the Networking and Information Systems Laboratory, Department of Electrical and Computer Engineering, Texas A&M University, College Station, TX, USA. He is an IEEE Fellow for contributions to statistical quality of services (QoS) theory in mobile wireless networks. Professor Zhang has published more than 400 research articles. He received the U.S. National Science Foundation CAREER Award in 2004 and six IEEE Best Paper Awards from IEEE flagship conferences. One of his IEEE Journal on Selected Areas in Communications papers has been listed as the IEEE Best Readings Paper. He is an IEEE Distinguished Lecturer for both IEEE ComSoc and IEEE VTC. He is serving and has served as Editors for a large number of IEEE Transactions and Journals and as General and TPC Chairs for numerous IEEE Conferences and Symposia.   
  </p>
 
+  <hr class="line">
     <h3 style="font-size: 26px"> <strong> Prof. Trung Q. Duong, Memorial University, Canada </strong></h3>
   <h3 style="font-size: 26px"> <strong> Title: TBA </strong></h3>
 
