--- a/Keynote.html
+++ b/Keynote.html
@@ -29,5 +29,13 @@
     <h3 style="font-size: 26px"> <strong> Prof. Trung Q. Duong, Memorial University, Canada </strong></h3>
   <h3 style="font-size: 26px"> <strong> Title: TBA </strong></h3>
 
+  <p align="justify" style="font-size: 20px">
+    <strong> Abstract: </strong> TBA
+    <\p>
+
+       <p align="justify" style="font-size: 20px">
+   <img src="image/Trung_Duong.jpg" style="float:left; margin-right:20px" width="60%" height="60%"> 
+        <\p>
+
 </body>
 </html>
