--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 <h1 style="font-size: 40px" align="center"> 
-    Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMDCS)
+    Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-tier Distributed Computing Systems (DTMTDCS)
 </h1>
   <h3 style= margin-left:70px; margin-right:70px; font-size: 25px" align="center">
   Organized in conjunction with <br>
