--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Organizing Committee for DTMDCS 2024</title>
+  <title>Organizing Committee for DTMTDCS 2024</title>
   <style>
 table, th, td {
   border:0px solid black;
