--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>DTMDCS 2024</title>
+  <title>DTMTDCS 2024</title>
 </head>
 
 <h1 style="font-size: 40px" align="center"> 
