--- a/Keynote.html
+++ b/Keynote.html
@@ -6,7 +6,7 @@
 </head>
 
 <h1 style="font-size: 40px" align="center"> 
-   Keynotes for International Workshop on DTMDCS 2024
+   Keynotes for International Workshop on DTMTDCS 2024
 </h1>
   
 <img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
