--- a/Keynote.html
+++ b/Keynote.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>DTMTDCS 2024</title>
+  <title>Keynotes for DTMTDCS 2024</title>
 </head>
 
 <h1 style="font-size: 40px" align="center"> 
