--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ July 16-19, 2024, Jersey City, New Jersey, USA
   </a>
   
   <a href="Keynote.html">
-  <button class="button button2"> Keynote </button>
+  <button class="button button2"> Keynote Speakers </button>
   </a>
   
    <a href="Workshop_Program.html">
