--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -48,7 +48,8 @@ table, th, td {
     <td><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></td>
   </tr>
   <tr>
-    <td style="font-size: 26px"> Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> Xi Zhang </a></td>
+    <td style="font-size: 26px"> Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> 
+      <strong> Xi Zhang <\strong></a></td>
       </tr>
     <tr>
     <td style="font-size: 26px"> Texas A&M University, College Station, U.S.A.</td>
@@ -63,7 +64,8 @@ table, th, td {
     <td><img src="image/Kunlun_Wang.jpg" width="20%" height="20%"></td>
   </tr>
   <tr>
-    <td style="font-size: 26px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> Kunlun Wang </a></td>
+    <td style="font-size: 26px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> 
+      <strong> Kunlun Wang <\strong> </a></td>
   </tr>
     <tr>
     <td style="font-size: 26px"> East China Normal University, China</td>
