--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -75,7 +75,7 @@ table, th, td {
     <h2 style="font-size: 28px"> 
   Steering Committee Members
   </h2>
-    <ul style="margin-top:50px; font-size: 20px">
+    <ul style="margin-top:50px; margin-bottom:20px; font-size: 26px">
       <li> Yuanyuan Yang, State University of New York at Stony Brook, U.S.A. </li>
       <li> Trung Q. Duong, Memorial University, Canada </li>
       <li> Dusit Niyato, Nanyang Technological University, Singapore  </li>
@@ -88,7 +88,7 @@ table, th, td {
  <h2 style="font-size: 28px"> 
   TPC Members
   </h2>
-    <ul style="margin:50px; font-size: 20px">
+    <ul style="margin:80px; margin-bottom:20px; font-size: 26px">
       <li> Xu Chen, Sun Yat-sen University, China </li>
       <li> Mugen Peng, Beijing University of Posts and Telecommunications, China </li>
       <li> Tony Q.S. Quek, Singapore University of Technology and Design, Singapore  </li>
