--- a/Keynote.html
+++ b/Keynote.html
@@ -47,7 +47,7 @@
 
     <div style="text-align: center;">
      <img src="image/Trung_Duong.jpg" style="margin-right:20px" width="25%" height="25%"> 
-      <\div>
+    </div>
        <p align="justify" style="font-size: 20px">
          
         </p>
