--- a/Keynote.html
+++ b/Keynote.html
@@ -16,7 +16,8 @@
   <h1 class="page-header" align="center" style="font-size: 40px"> 
     Keynote Speakers 
   </h1>
-
+  
+    <hr class="line">
     <div style="text-align: center;">
   <img src="image/Xi_Zhang.jpg" style="margin-right:20px" class="center" width="15%" height="15%"> 
   </div>
