--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -49,7 +49,7 @@ table, th, td {
   </tr>
   <tr>
     <td style="font-size: 26px"> Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> 
-      <strong> Xi Zhang <\strong></a></td>
+      <strong> Xi Zhang </strong></a></td>
       </tr>
     <tr>
     <td style="font-size: 26px"> Texas A&M University, College Station, U.S.A.</td>
@@ -65,7 +65,7 @@ table, th, td {
   </tr>
   <tr>
     <td style="font-size: 26px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> 
-      <strong> Kunlun Wang <\strong> </a></td>
+      <strong> Kunlun Wang </strong> </a></td>
   </tr>
     <tr>
     <td style="font-size: 26px"> East China Normal University, China</td>
