--- a/Keynote.html
+++ b/Keynote.html
@@ -19,7 +19,7 @@
   
     <hr class="line">
     <div style="text-align: center;">
-  <img src="image/Xi_Zhang.jpg" style="margin-right:20px;margin-top:50px " class="center" width="15%" height="15%"> 
+  <img src="image/Xi_Zhang.jpg" style="margin-right:20px; margin-top:50px " class="center" width="15%" height="15%"> 
   </div>
   
   <h3 style="font-size: 26px"> <strong> First Keynote Speaker: Prof. Xi Zhang, IEEE Fellow, IEEE Distinguished Lecturer, Full Professor, Founding Director, Texas A&M University, College Station, Texas, U.S.A. </strong></h3>
@@ -46,7 +46,7 @@
   <hr class="line">
 
   <div style="text-align: center;">
-     <img src="image/Trung_Duong.jpg" style="margin-right:20px" width="25%" height="25%"> 
+     <img src="image/Trung_Duong.jpg" style="margin-right:20px; margin-top:50px" width="25%" height="25%"> 
     </div>
   
     <h3 style="font-size: 26px"> <strong> Second Keynote Speaker: Prof. Trung Q. Duong, Memorial University, Canada </strong></h3>
