--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -42,7 +42,7 @@ table, th, td {
 
 <table style="table-layout: fixed ; width: 100%;">
   <tr>
-    <th> <h2 style="font-size: 28px">  General Chair </h2> </th>
+    <th> <h2 style="font-size: 40px">  General Chair </h2> </th>
   </tr>
   <tr>
     <td><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></td>
@@ -58,7 +58,7 @@ table, th, td {
 
     <table style="table-layout: fixed ; width: 100%;">
   <tr>
-    <th><h2 style="margin-top:80px; font-size: 28px"> TPC Chair</h2></th>
+    <th><h2 style="margin-top:80px; font-size: 40px"> TPC Chair</h2></th>
   </tr>
   <tr>
     <td><img src="image/Kunlun_Wang.jpg" width="20%" height="20%"></td>
@@ -72,7 +72,7 @@ table, th, td {
   </tr>
 </table>
 
-    <h2 style="font-size: 28px"> 
+    <h2 style="font-size: 40px"> 
   Steering Committee Members
   </h2>
     <ul style="margin-top:50px; margin-bottom:20px; font-size: 26px">
@@ -85,7 +85,7 @@ table, th, td {
       <li> Jie Li, Shanghai Jiao Tong University, China </li>
       </ul>
 
- <h2 style="font-size: 28px"> 
+ <h2 style="margin-top:50px; font-size: 40px"> 
   TPC Members
   </h2>
     <ul style="margin:80px; margin-bottom:20px; font-size: 26px">
