--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -85,7 +85,7 @@ table, th, td {
       <li> Jie Li, Shanghai Jiao Tong University, China </li>
       </ul>
 
- <h2 style="margin-top:50px; font-size: 40px"> 
+ <h2 style="margin-top:50px; margin-bottom:20px;font-size: 40px"> 
   TPC Members
   </h2>
     <ul style="margin:80px; margin-bottom:20px; font-size: 26px">
