--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -85,10 +85,10 @@ table, th, td {
       <li> Jie Li, Shanghai Jiao Tong University, China </li>
       </ul>
 
- <h2 style="margin-top:50px; margin-bottom:20px;font-size: 40px"> 
+ <h2 style="margin-top:80px; margin-bottom:20px; font-size: 40px"> 
   TPC Members
   </h2>
-    <ul style="margin:80px; margin-bottom:20px; font-size: 26px">
+    <ul style="margin-bottom:20px; font-size: 26px">
       <li> Xu Chen, Sun Yat-sen University, China </li>
       <li> Mugen Peng, Beijing University of Posts and Telecommunications, China </li>
       <li> Tony Q.S. Quek, Singapore University of Technology and Design, Singapore  </li>
