--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -72,10 +72,10 @@ table, th, td {
   </tr>
 </table>
 
-    <h2 style="font-size: 40px"> 
+    <h2 style="margin-top:80px; margin-bottom:20px; font-size: 40px"> 
   Steering Committee Members
   </h2>
-    <ul style="margin-top:50px; margin-bottom:20px; font-size: 26px">
+    <ul style="margin-bottom:20px; font-size: 26px">
       <li> Yuanyuan Yang, State University of New York at Stony Brook, U.S.A. </li>
       <li> Trung Q. Duong, Memorial University, Canada </li>
       <li> Dusit Niyato, Nanyang Technological University, Singapore  </li>
