--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -80,30 +80,13 @@ table, th, td {
       <li> Trung Q. Duong, Memorial University, Canada </li>
       <li> Dusit Niyato, Nanyang Technological University, Singapore  </li>
       <li> Octavia A. Dobre, Memorial University, Canada  </li>
-
+      <li> George K. Karagiannidis, Aristotle University of Thessaloniki, Greece </li>
       <li> Yang Yang, Hong Kong University of Science and Technology (Guangzhou), China  </li>
       <li> Jie Li, Shanghai Jiao Tong University, China </li>
       </ul>
 
- <h2 style="margin-top:80px; margin-bottom:20px; font-size: 40px"> 
-  TPC Members
-  </h2>
-    <ul style="margin-bottom:20px; font-size: 26px">
-      <li> Xu Chen, Sun Yat-sen University, China </li>
-      <li> Mugen Peng, Beijing University of Posts and Telecommunications, China </li>
-      <li> Tony Q.S. Quek, Singapore University of Technology and Design, Singapore  </li>
-      <li> Kaibin Huang, The University of Hong Kong, Hong Kong  </li>
-      <li> David J. Love, the School of Electrical and Computer Engineering, Purdue University, West Lafayette, IN, USA  </li>
-      <li> Kun Guo, East Chian Normal University, China  </li>
-      <li> Youngchul Sung, the Department of Electrical Engineering in KAIST, Daejeon, Korea </li>
-      <li> Michael D. Zoltowski, Purdue University, USA </li>
-      <li> John Grundy, Monash University, Australia </li>
-      <li> Xiaofei Wang, Tianjin University, China  </li>
-      <li> Yuanming Shi, ShanghaiTech University, China  </li>
-      <li> Changsheng You, Southern University of Science and Technology, China  </li>
-      <li> Mingzhe Chen, University of Miami, USA  </li>
-      <li> Qixuan Zhu, Texas A&M University, College Station, U.S.A.  </li>
-      </ul>
+
+ 
   </body>
   
 </html>
