--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -76,10 +76,11 @@ table, th, td {
   Steering Committee Members
   </h2>
     <ul style="margin-bottom:20px; font-size: 26px">
+      <li> Xi Zhang, Texas A&M University, College Station, U.S.A. (Chair) </li>
       <li> Yuanyuan Yang, State University of New York at Stony Brook, U.S.A. </li>
-      <li> Trung Q. Duong, Memorial University, Canada </li>
       <li> Dusit Niyato, Nanyang Technological University, Singapore  </li>
       <li> Octavia A. Dobre, Memorial University, Canada  </li>
+      <li> Trung Q. Duong, Memorial University, Canada </li>
       <li> George K. Karagiannidis, Aristotle University of Thessaloniki, Greece </li>
       <li> Yang Yang, Hong Kong University of Science and Technology (Guangzhou), China  </li>
       <li> Jie Li, Shanghai Jiao Tong University, China </li>
