--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -73,7 +73,7 @@ table, th, td {
 </table>
 
     <h2 style="margin-top:80px; margin-bottom:20px; font-size: 40px"> 
-  Steering Committee Members
+  Steering Committee
   </h2>
     <ul style="margin-bottom:20px; font-size: 26px">
       <li> Xi Zhang, Texas A&M University, College Station, U.S.A. (Chair) </li>
